# primecount

./: .gitignore  CMakeLists.txt  Makefile  README.md  alg1.mermaid  alg2.mermaid  bench14.csv  benchmark.csv  benchmark_1e13.csv  bit_sieve.hpp  fenwick_tree.cpp  fenwick_tree.h  fenwick_tree.hpp  main.cpp  notes.txt  phi.R  phi_block.h  phi_block.hpp  popcnt_array.hpp  primecount.c  primecount.cpp  primecount.h  primecount.hpp  primecount_old.py  test_bit_sieve.cpp  test_fenwick_tree.cpp  test_popcnt_array.cpp  tests.c  tests.cpp
bench/: bench12.csv  phi.Rmd  phi.nb.html
extra/: fenwick_tree.cpp  fenwick_tree_array.c  fenwick_tree_struct.c  popcnt_array.cpp
notes/: alg2.mermaid  alg3.mermaid  bench13.csv  notes.txt  phi.Rmd  phi.html
src/: Makefile  fenwick_tree.cpp  fenwick_tree.hpp  main.cpp  phi_block.cpp  phi_block.hpp  primecount.cpp  primecount.hpp  test_fenwick_tree.cpp  test_phi_block.cpp  tests.cpp
tests/: CMakeLists.txt  test_phi_block.cpp  tests.cpp
